Aug 01 2002  2.5.1  Added stderr and stdout suppression to the sound playing
                     binary forks
Jul 31 2002  2.5.1  Made packetsignatures.h bsd-friendly and added a BSD
                     prism2 unmonitor (Dave Worth)
                    More memory alignment errors in tcpclient fixed.
Jul 30 2002  2.5.1  Started 2.5.1 development tree

Jul 30 2002  2.4.5  Dropped 2.4.5 release from current development code.  
                     Numerous bugfixes and some new features.

Jul 30 2002  2.5    Fixed window sizing on small screens and caught possible
                     segfaults.
                    Added permissions to wav and config files (from debian)
Jul 29 2002  2.5    Handled exception fds in sound and speech
                    Killed more minor memory leaks
                    Fixed memory offset on the ipmap loading, should fix the
                     bus errors on ARM.
                    Fixed memory alignment errors in expat.cc for some 
                     platforms.
Jul 28 2002  2.5    Reorganized option parsing on kismet_server to process most
                     of the options after dropping root.
                    Rewrote sound handling to handle massive numbers of sound
                     or speech requests at once.
                    Numerous bugfixes for variable initialization and memory
                     leakage (valgrind rocks!)
Jul 26 2002  2.5    Tweaked altitude handling, should report the right value.
                    Added best signal quality tracking
                    Added signal quality display to the network details panel
                    Added sorting by signal quality and power
                    Rolled in patch to monitor and hopper to work with the
                     Prism2 HostAP drivers (Andreas Oberritter)
                    Added tracking of point of strongest signal and compass
                     tracking of that point OR estimated center.