@@ -78,6 +78,12 @@ void CatchShutdown(int sig) {
     if (gui != NULL && sig != SIGHUP)
         gui->EndDisplay();
 
+    // Kill our sound players
+    if (soundpid != -1)
+        kill(soundpid, 9);
+    if (speechpid != -1)
+        kill(speechpid, 9);
+
     exit(0);
 }
 
